@@ -145,8 +145,9 @@ class TestPsych < Psych::TestCase
   end
 
   def test_load_file_with_fallback
-    t = Tempfile.create(['empty', 'yml'])
-    assert_equal Hash.new, Psych.load_file(t.path, Hash.new)
+    Tempfile.create(['empty', 'yml']) {|t|
+      assert_equal Hash.new, Psych.load_file(t.path, Hash.new)
+    }
   end
 
   def test_parse_file
